--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title>cakeTV</title>
+<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 <style>
 body {
-  font-family: Calibri;
+  font-family: Nunito;
 }
 </head>
 <body>
