--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <style>
 body {
   font-family: Nunito;
+  background-color: #ffa500;
   color: #332100;
 }
+</style>
 </head>
 <body>
 <h1>Welcome to my webisite!</h1>
