--- a/index.html
+++ b/index.html
@@ -13,36 +13,21 @@ body {
 </head>
 <body>
 <h1>Welcome to my webisite!</h1>
-<h2>ABIC in my style</h2>
-<h5>Feb 29, 2020</h5>
-<iframe src="https://scratch.mit.edu/projects/372251840/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<h2>default dance emote</h2>
+<h5>Mar 4, 2020</h5>
+<iframe src="https://scratch.mit.edu/projects/373192674/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<p>fortnite</p>
 <br><br>
-<h2>pfp for @DaGod-TV</h2>
-<h5>Feb 28, 2020</h5>
-<iframe src="https://scratch.mit.edu/projects/371680247/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<p>Follow @DaGod-Tv. Comment if you want me to make you a pfp.</p>
+<h2>Random-Landom Entry</h2>
+<h5>Mar 1, 2020</h5>
+<iframe src="https://scratch.mit.edu/projects/372420853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<p>@SCRACO65 you are really good and I look up to you, I really hope this makes it into your random landom project. Please tell me what you think, thnks. :)</p>
+<br>
+<p>me, yt mp3 converter, youtube, @SCRACO65, x gon give it to ya, NOW THATS A LOT OF DAMAGE, asdf, and lazarbeam outro.</p>
 <br><br>
-<h2>Add yourself taking a SELFIE! remix</h2>
-<h5>Feb 26, 2020</h5>
-<iframe src="https://scratch.mit.edu/projects/371310871/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<p>IDK</p>
-<br><br>
-<h2>my wallpaper</h2>
-<h5>Feb 26, 2020</h5>
-<iframe src="https://scratch.mit.edu/projects/370630975/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<br><br>
-<h2>Kahoot in a nutshell. ( ͡° ͜ʖ ͡°)</h2>
-<h5>Feb 26, 2020</h5>
-<iframe src="https://scratch.mit.edu/projects/370764225/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<p>max volume at the end. :)</p>
-<p>youtube and text to speech for the sound</p>
-<br>
-<p>coding was all me</p>
-<br>
-<p>drawing was all me</p>
-<br>
-<p>Kahoot.it</p>
-<br>
-<p>( ͡° ͜ʖ ͡°)</p>
+<h2>Q and A</h2>
+<h5>Mar 1, 2020</h5>
+<iframe src="https://scratch.mit.edu/projects/372305399/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<p>Hello, I am doing a Q and A! So you guys are all going to ask me really stupid questions and if your question is good, I will answer it in a 200 follower special. But I may not answer your comment in the animation. No rules on questions you can ask me anything. ONLY ASK ONE QUESTION!!! The due date is when I get to 200 followers. I will answer your comment but it may not be in the animation. Have fun. :D</p>
 </body>
 </html>
